# Taurid

./: .gitignore  .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/LICENSE/: LICENSE
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: common.rs  lib.rs  main.rs  mgcommand.rs  mgerror.rs  mglobal.rs  mobiles.rs  setup.rs  utils.rs
src-tauri/src/common/: mglog.rs
src-tauri/src/mobiles/: window.rs
src-tauri/src/utils/: mcge_email.rs  mcge_files.rs  mcge_toml.rs
src/utils/: mglog.ts
